# any2md

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mdconv.py  pdf2md.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  codeql.yml  publish.yml
any2md/: __init__.py  __main__.py  _docling.py  _docling_cache.py  _http.py  _logging.py  cli.py  config.py  frontmatter.py  heuristics.py  utils.py
any2md/converters/: __init__.py  docx.py  html.py  pdf.py  txt.py
any2md/pipeline/: __init__.py  cleanup.py  structured.py  text.py
docs/: architecture.md  cli-reference.md  output-format.md  troubleshooting.md  upgrading-from-0.7.md
docs/superpowers/plans/: 2026-04-26-any2md-v1-phase1-foundation.md  2026-04-26-any2md-v1-phase4-polish-config-docs.md  2026-04-26-any2md-v1.0.2-implementation.md  2026-04-27-v1.0.6-security-hardening.md  2026-05-04-v1.1.0-persistent-converter.md  2026-05-06-v1.1.1-security-hardening.md
docs/superpowers/specs/: 2026-04-26-any2md-v1-design.md  2026-04-26-any2md-v1.0.2-design.md  2026-04-26-v1.0.3-empty-title-orphan-punct-design.md  2026-04-27-v1.0.6-security-hardening-design.md  2026-05-04-v1.1.0-persistent-converter-design.md  2026-05-06-v1.1.1-security-design.md
mdconv/: __init__.py  __main__.py  cli.py  utils.py
mdconv/converters/: docx.py  html.py  pdf.py
scripts/: audit-outputs.py  bench_docling_cache.py  validate-phase1.sh
tests/: conftest.py
tests/fixtures/: make_fixtures.py
tests/integration/: test_docling_persistence.py  test_docx_backend_override.py  test_html_trafilatura.py  test_txt.py
tests/unit/: test_atomic_write_symlink_race.py  test_auto_id.py  test_config_toml_warn.py  test_content_hash.py  test_docling_cache.py  test_frontmatter_compose.py  test_frontmatter_helpers.py  test_frontmatter_key_injection.py  test_heuristics.py  test_heuristics_wikipedia_host.py  test_http_ip_allowlist.py  test_http_safe.py  test_http_ssrf_pin.py  test_http_user_agent.py  test_lockfile_freshness.py  test_log_sanitizer.py  test_logging_module.py  test_meta_reserved_keys.py  test_pdf_complexity.py  test_pdf_image_symlink.py  test_safe_dir_name.py  test_security_error_strings.py  test_url_creds_scrubbed.py  test_validators.py  test_workflow_permissions.py
tests/unit/pipeline/: test_runner.py  test_strip_orphan_punctuation.py  test_structured_body_cleanup_stages.py
tests/unit/scripts/: test_audit_outputs.py
