[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "any2md"
dynamic = ["version"]
description = "Convert PDF, DOCX, HTML, and TXT files — or web pages by URL — to clean, LLM-optimized Markdown with YAML frontmatter."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "rocklambros", email = "rock@rockcyber.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "pymupdf>=1.24.0,<2",
    "pymupdf4llm>=0.0.17,<1",
    "mammoth>=1.6.0,<2",
    "markdownify>=0.13.0,<2",
    "trafilatura>=1.12.0,<3",
    "beautifulsoup4>=4.12.0,<5",
    "lxml>=6.1.0,<7",        # CVE-2026-41066 fix
    "pillow>=12.2.0,<13",    # CVE-2026-25990, CVE-2026-40192 fix
    "urllib3>=2.6.3,<3",     # CVE-2026-21441 fix
    "defusedxml>=0.7.1,<1",  # XXE defense-in-depth (Task P2)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-snapshot>=0.9.0",
    "pyyaml>=6.0",
    "reportlab>=4.0.0",
    "ruff>=0.6.0",
]
high-fidelity = [
    "docling>=2.0.0",
]

[project.scripts]
any2md = "any2md.cli:main"

[project.urls]
Homepage = "https://github.com/rocklambros/any2md"
Issues = "https://github.com/rocklambros/any2md/issues"

[tool.hatch.version]
path = "any2md/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.claude",
    "/.devcontainer",
    "/.gsd",
    "/.zerg",
    "/input",
    "/output",
    "/Text",
    "mdconv.py",
]

[tool.hatch.build.targets.wheel]
packages = ["any2md"]
